legacy/deploy/k8s/overlays/jax-cluster-dev-10--sqa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  geneweaver-legacy-ingress
  annotations:
    # NOTE: When deploying a new instance, make sure to use the staging issuer first
    # so that you don't hit the rate limit for the production issuer.
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.jax-cluster-dev-10.jax.org/oauth2/start?rd=https://$http_host$escaped_request_uri"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "geneweaver-sqa.jax.org"
      secretName: geneweaver-sqa-jax-org-tls
  rules:
    - host: geneweaver-sqa.jax.org
      http:
        paths:
          - backend:
              service:
                name: geneweaver-aon-api
                port:
                  number: 8000
            path: /aon/api
            pathType: Prefix
    - host: geneweaver-sqa.jax.org
      http:
        paths:
        - backend:
            service:
              name: geneweaver-api
              port:
                number: 8000
          path: /api
          pathType: Prefix
    - host: geneweaver-sqa.jax.org
      http:
        paths:
        - backend:
            service:
              name: geneweaver-ui
              port:
                number: 80
          path: /next
          pathType: Prefix
    - host: geneweaver-sqa.jax.org
      http:
        paths:
        - backend:
            service:
              name: gene-expression-service
              port:
                number: 80
          path: /gedb
          pathType: Prefix
    - host: geneweaver-sqa.jax.org
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: geneweaver-legacy
              port:
                number: 8000
